--- a/.bundle/config
+++ b/.bundle/config
@@ -1,5 +1,5 @@
 ---
-BUNDLE_PATH: bundle
+BUNDLE_PATH: .bundle
 BUNDLE_DISABLE_SHARED_GEMS: '1'
-BUNDLE_BIN: bin/
-BUNDLE_DRY_RUN: false
+BUNDLE_BIN: bin
+BUNDLE_DRY_RUN: 'false'
